--- a/bamx/package.json
+++ b/bamx/package.json
@@ -12,6 +12,8 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "^54.0.10",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
