--- a/bamx/package.json
+++ b/bamx/package.json
@@ -18,7 +18,10 @@
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-gifted-charts": "^1.4.64",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-progress-bar-horizontal": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
