--- a/bamx/package.json
+++ b/bamx/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.81.4",
     "react-native-gifted-charts": "^1.4.64",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-progress-bar-horizontal": "^1.0.1"
+    "react-native-progress-bar-horizontal": "^1.0.1",
+    "react-native-size-matters": "^0.4.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
